--- a/products.html
+++ b/products.html
@@ -91,10 +91,10 @@
             <div class="shape" style="background-image: url(assets/images/shape/banner-shap.png);"></div>
             <div class="auto-container">
                 <div class="content-box">
-                    <h1>Servicios</h1>
+                    <h1>Productos</h1>
                     <ul class="bread-crumb clearfix">
                         <li><a href="index.html">Inicio</a></li>
-                        <li>Servicios</li>
+                        <li>Productos</li>
                     </ul>
                 </div>
             </div>
@@ -109,29 +109,7 @@
                     <div class="col-sm-12 content-side">
                         <div class="our-shop">
                             <div class="row clearfix box_products">
-                                <div class="col-lg-6 col-md-6 col-sm-12 shop-block">
-                                    <div class="shop-block-one wow fadeInUp animated" data-wow-delay="00ms"
-                                        data-wow-duration="1500m">
-                                        <div class="inner-box">
-                                            <figure class="image-box"><img src="assets/images/resource/shop/shop-1.jpg"
-                                                    alt=""></figure>
-                                            <div class="lower-content">
-                                                <div class="shape"
-                                                    style="background-image: url(assets/images/shape/shape-7.png);">
-                                                </div>
-                                                <span>2L 3 Bottles</span>
-                                                <h4><a href="shop-details.html">Mineral Water Bottle</a></h4>
-                                                <h6>$70.00</h6>
-                                                <p>Lorem ipsum dolor sit amet adipelit sed eiusmte.mpor encid dolore.
-                                                </p>
-                                                <div class="btn-box">
-                                                    <a href="shop-details.html" class="theme-btn btn-two">Add to
-                                                        cart</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                               
                             </div>
                         </div>
                     </div>
@@ -169,7 +147,7 @@
     <!-- main-js -->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/services.js"></script>
+    <script src="assets/js/products.js"></script>
 
 </body><!-- End of .page_wrapper -->
 
