--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<title>Acuasafe - HTML 5 Template Preview</title>
+<title>Nitrogases Industriales - Inicio</title>
 
 <!-- Fav Icon -->
 <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
@@ -238,8 +238,8 @@
                                     <p>Contamos con servicio a domicilio</p>
                                 </div>
                                 <ul class="list clearfix">
-                                    <li>Free Delivery</li>
-                                    <li>7 Days In A Week Service </li>
+                                    <li>Envios a nivel nacional</li>
+                                    <li>Envío máximo de dos días en Bogotá</li>
                                 </ul>
                                 <div class="btn-box">
                                     <a href="service.html" class="theme-btn btn-one">Nuestros servicios</a>
