--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,15 @@
                     <span data-text-preloader="S" class="letters-loading">
                         S
                     </span>
+                    <span data-text-preloader="S" class="letters-loading">
+                        S
+                    </span>
+                    <span data-text-preloader="A" class="letters-loading">
+                        A
+                    </span>
+                    <span data-text-preloader="S" class="letters-loading">
+                        S
+                    </span>
                 </div>
             </div>  
         </div>
