--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
                     <span data-text-preloader="S" class="letters-loading">
                         S
                     </span>
+                    <span data-text-preloader="S" class="letters-loading">
+                        S
+                    </span>
+                    <span data-text-preloader="A" class="letters-loading">
+                        A
+                    </span>
+                    <span data-text-preloader="S" class="letters-loading">
+                        S
+                    </span>
                 </div>
             </div>  
         </div>
