--- a/products.html
+++ b/products.html
@@ -45,6 +45,7 @@
                 <div class="animation-preloader">
                     <div class="spinner"></div>
                     <div class="txt-loading">
+                        <p style="color: white; margin-bottom: 20px; font-size: 2rem;">COMERCIALIZADORA</p>
                         <span data-text-preloader="N" class="letters-loading">
                             N
                         </span>
