--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             </div>
                             <div class="content-box">
                                 <h2>RECARGA DE GASES INDUSTRIALES</h2>
-                                <p>venta gases industriales equipos de oxicorte venta de cilindros y mantenimiento de equipos, válvulas, regualdores, pintura y electrostática de cilindros</p>
+                                <p>venta gases industriales equipos de oxicorte venta de cilindros y mantenimiento de equipos, válvulas, regualdores, pintura, electrostática de cilindros, pintura electrostática de cilindros y extintores</p>
                                 <div class="btn-box clearfix">
                                     <a href="services.html" class="theme-btn btn-one">Nuestros servicios</a>
                                 </div>
