--- a/about.html
+++ b/about.html
@@ -128,6 +128,103 @@
                         </div>
                     </div>
                 </div>
+                <div class="row mt-5">
+                    <div class="col-lg-6 col-md-12 col-sm-12 content-column">
+                        <div class="sec-title">
+                            <h2 class="text-center" style="text-align: center;">MISIÓN</h2>
+                            <p>Ser una empresa comprometida y brindar soluciones de calidad, seguridad y productividad a
+                                los
+                                procesos de nuestros clientes, a través de una oferta amigable e innovadora en productos
+                                y
+                                aplicaciones de gases industriales, especiales, contribuyendo así con el desarrollo
+                                económico y
+                                sostenible de Colombia. </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 content-column">
+                        <div class="sec-title">
+                            <h2 class="text-center" style="text-align: center;">VISIÓN</h2>
+                            <p>Ser una empresa líder en el mercado de gases industriales reconocida por los clientes ser
+                                la mejor
+                                alternativa a nivel nacional, siendo lideres en servicio y atención, ofreciendo
+                                soluciones
+                                innovadoras y competitivas en el mercado, desde el punto de vista económico, de calidad
+                                y de
+                                sostenibilidad. Ser reconocidos por nuestro trabajo comunitario e impacto positivo en
+                                las regiones
+                                donde operamos. </p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 content-column">
+                        <div class="sec-title">
+                            <h2 class="text-center" style="text-align: center;">POLITICAS </h2>
+                            <p>Producimos gases industriales, especiales bajo los más altos estándares de calidad.
+                                Nos comprometemos a exceder los requisitos de nuestros clientes en cada proceso,
+                                producto y
+                                servicio.
+                                <br>
+                                Forjamos una cultura de satisfacción del cliente cimentada en nuestros valores
+                                institucionales, la
+                                seguridad y la salud de nuestros colaboradores y el uso eficiente de recursos para un
+                                desarrollo
+                                sostenible.
+                                <br>
+                                Garantizamos conformidad con las necesidades y expectativas de las partes interesadas a
+                                través de
+                                la mejora continua de nuestro sistema de gestión ambiental.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 content-column">
+                        <div class="sec-title">
+                            <h2 class="text-center" style="text-align: center;">VALORES </h2>
+                            <br>
+                            <br>
+                            <h6>HONESTIDAD </h6>
+                            
+                            Busca constantemente la verdad. Toma de decisiones de manera franca y trasparente.
+                            <br>
+                            <br>
+                            <h6>RESPETO </h6>
+                            Considera las opiniones, actitudes y aptitudes de cada persona, con tolerancia y seriedad.
+                            Busca
+                            siempre la empatía y solidaridad con todas las partes interesadas.
+
+                            <br>
+                            <br>
+                            <h6>LEALTAD </h6>
+                            Identifícate con la misión, la visión y los valores de la empresa. Entrega lo mejor de ti en
+                            nel
+                            cumplimiento de los estándares establecidos.
+
+                            <br>
+                            <br>
+                            <h6>TRABAJO EN EQUIPO </h6>
+                            Suma tus cualidades a las de todo el equipo para lograr una meta en común. Busca siempre
+                            mejorar el ambiente de trabajo y el entorno, dentro y fuera de la empresa.
+
+                            <br>
+                            <br>
+                            <h6>INNOVACION </h6>
+                            Crea nuevas soluciones a los retos que se nos presentan día a día. Busca nuevos caminos que
+                            lleven a mejores resultados. Mide los riesgos, pero asúmelos como parte esencial del
+                            crecimiento
+                            de la compañía.
+                            <br>
+                            <br>
+                            <h6> DESARROLLO INTEGRAL</h6>
+                            Busca la mejora continua en todos los aspectos: personal, profesional, familiar y ecológico.
+                            Lucha
+                            siempre con la mediocridad y la indiferencia.
+                            <br>
+                            <br>
+                            <h6>CULTURA ECOLOGICA</h6>
+                            Cuida el medio ambiente, infórmate y busca siempre alternativas amigables con nuestro
+                            entorno,
+                            refleja valores en todas tus acciones diarias.
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
