--- a/index.html
+++ b/index.html
@@ -2,92 +2,113 @@
 <html lang="en">
 
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<title>Nitrogases Industriales - Inicio</title>
+    <title>Nitrogases Industriales - Inicio</title>
 
-<!-- Fav Icon -->
-<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <!-- Fav Icon -->
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&amp;display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;500;600;700;800;900&amp;display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&amp;display=swap"
+        rel="stylesheet">
 
-<!-- Stylesheets -->
-<link href="assets/css/font-awesome-all.css" rel="stylesheet">
-<link href="assets/css/flaticon.css" rel="stylesheet">
-<link href="assets/css/owl.css" rel="stylesheet">
-<link href="assets/css/bootstrap.css" rel="stylesheet">
-<link href="assets/css/jquery.fancybox.min.css" rel="stylesheet">
-<link href="assets/css/animate.css" rel="stylesheet">
-<link href="assets/css/jquery-ui.css" rel="stylesheet">
-<link href="assets/css/color.css" rel="stylesheet">
-<link href="assets/css/style.css" rel="stylesheet">
-<link href="assets/css/responsive.css" rel="stylesheet">
+    <!-- Stylesheets -->
+    <link href="assets/css/font-awesome-all.css" rel="stylesheet">
+    <link href="assets/css/flaticon.css" rel="stylesheet">
+    <link href="assets/css/owl.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/jquery.fancybox.min.css" rel="stylesheet">
+    <link href="assets/css/animate.css" rel="stylesheet">
+    <link href="assets/css/jquery-ui.css" rel="stylesheet">
+    <link href="assets/css/color.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/responsive.css" rel="stylesheet">
 
 </head>
 
 
 <!-- page wrapper -->
+
 <body>
 
     <div class="boxed_wrapper">
- <!-- preloader -->
- <div class="loader-wrap">
-    <div class="preloader">
-        <div class="preloader-close">Preloader Close</div>
-        <div id="handle-preloader" class="handle-preloader">
-            <div class="animation-preloader">
-                <div class="spinner"></div>
-                <div class="txt-loading">
-                    <p style="color: white; margin-bottom: 20px; font-size: 3rem;">COMERCIALIZADORA</p>
-                    <span data-text-preloader="N" class="letters-loading">
-                        N
-                    </span>
-                    <span data-text-preloader="I" class="letters-loading">
-                        I
-                    </span>
-                    <span data-text-preloader="T" class="letters-loading">
-                        T
-                    </span>
-                    <span data-text-preloader="R" class="letters-loading">
-                        R
-                    </span>
-                    <span data-text-preloader="O" class="letters-loading">
-                        O
-                    </span>
-                    <span data-text-preloader="G" class="letters-loading">
-                        G
-                    </span>
-                    <span data-text-preloader="A" class="letters-loading">
-                        A
-                    </span>
-                    <span data-text-preloader="S" class="letters-loading">
-                        S
-                    </span>
-                    <span data-text-preloader="E" class="letters-loading">
-                        E
-                    </span>
-                    <span data-text-preloader="S" class="letters-loading">
-                        S
-                    </span>
-                    <span data-text-preloader="S" class="letters-loading">
-                        S
-                    </span>
-                    <span data-text-preloader="A" class="letters-loading">
-                        A
-                    </span>
-                    <span data-text-preloader="S" class="letters-loading">
-                        S
-                    </span> 
+        <!-- preloader -->
+        <div class="loader-wrap">
+            <div class="preloader">
+                <div class="preloader-close">Preloader Close</div>
+                <div id="handle-preloader" class="handle-preloader">
+                    <div class="animation-preloader">
+                        <div class="spinner"></div>
+                        <div class="txt-loading">
+                            <p style="color: white; margin-bottom: 20px; font-size: 3rem;">COMERCIALIZADORA</p>
+                            <span data-text-preloader="N" class="letters-loading">
+                                N
+                            </span>
+                            <span data-text-preloader="I" class="letters-loading">
+                                I
+                            </span>
+                            <span data-text-preloader="T" class="letters-loading">
+                                T
+                            </span>
+                            <span data-text-preloader="R" class="letters-loading">
+                                R
+                            </span>
+                            <span data-text-preloader="O" class="letters-loading">
+                                O
+                            </span>
+                            <span data-text-preloader="G" class="letters-loading">
+                                G
+                            </span>
+                            <span data-text-preloader="A" class="letters-loading">
+                                A
+                            </span>
+                            <span data-text-preloader="S" class="letters-loading">
+                                S
+                            </span>
+                            <span data-text-preloader="E" class="letters-loading">
+                                E
+                            </span>
+                            <span data-text-preloader="S" class="letters-loading">
+                                S
+                            </span>
+                            <span data-text-preloader="S" class="letters-loading">
+                                S
+                            </span>
+                            <span data-text-preloader="A" class="letters-loading">
+                                A
+                            </span>
+                            <span data-text-preloader="S" class="letters-loading">
+                                S
+                            </span>
+                        </div>
+                    </div>
                 </div>
-            </div>  
+            </div>
         </div>
-    </div>
-</div>
         <div class="component_header"></div>
+        <!-- <div class="mobile-menu">
+            <div class="close-btn"><i class="fas fa-times"></i></div>
+            <nav class="menu-box">
+                <div class="nav-logo"><a href="index.html"><img src="assets/images/footer-logo.png" alt="" title=""></a>
+                </div>
+                <div class="contact-info">
+                    <h4>Menú</h4>
+                    <ul class="clearfix">
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="services.html">Servicios</a></li>
+                        <li><a href="products.html">Productos</a></li>
+                        <li><a href="about.html">Sobre nosotros</a></li>
+                        <li><a href="contact.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div> -->
 
 
         <!-- banner-style-three -->
@@ -98,16 +119,18 @@
                     <div class="auto-container">
                         <div class="inner-box">
                             <div class="image-box">
-                                <figure class="image"><img  src="assets/images/home/2.jpg" alt=""></figure>
+                                <figure class="image"><img src="assets/images/home/2.jpg" alt=""></figure>
                             </div>
                             <div class="content-box">
                                 <h2>RECARGA DE GASES INDUSTRIALES</h2>
-                                <p>venta gases industriales equipos de oxicorte venta de cilindros y mantenimiento de equipos, válvulas, regualdores, pintura, electrostática de cilindros, pintura electrostática de cilindros y extintores</p>
+                                <p>venta gases industriales equipos de oxicorte venta de cilindros y mantenimiento de
+                                    equipos, válvulas, regualdores, pintura, electrostática de cilindros, pintura
+                                    electrostática de cilindros y extintores</p>
                                 <div class="btn-box clearfix">
                                     <a href="services.html" class="theme-btn btn-one">Nuestros servicios</a>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
                 <div class="slide-item">
@@ -118,12 +141,13 @@
                             </div>
                             <div class="content-box">
                                 <h2>RECARGA DE GASES INDUSTRIALES</h2>
-                                <p>NITROGENO ARGON CO2 ACETILENO MEZCLA OXIGENO HELIO . VENTA CILINDROS REGULADORES VALVULAS PRUEBAS EQUIPOS HIDROSTATICAS</p>
+                                <p>NITROGENO ARGON CO2 ACETILENO MEZCLA OXIGENO HELIO . VENTA CILINDROS REGULADORES
+                                    VALVULAS PRUEBAS EQUIPOS HIDROSTATICAS</p>
                                 <div class="btn-box clearfix">
                                     <a href="services.html" class="theme-btn btn-one">Nuestros servicios</a>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -146,7 +170,8 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
                             <div class="feature-block-one">
                                 <div class="inner-box">
-                                    <div class="shape" style="background-image: url(assets/images/shape/shape-27.png);"></div>
+                                    <div class="shape" style="background-image: url(assets/images/shape/shape-27.png);">
+                                    </div>
                                     <div class="icon-box"><i class="flaticon-water-drop"></i></div>
                                     <h4>Maxima calidad</h4>
                                 </div>
@@ -155,7 +180,8 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
                             <div class="feature-block-one">
                                 <div class="inner-box">
-                                    <div class="shape" style="background-image: url(assets/images/shape/shape-27.png);"></div>
+                                    <div class="shape" style="background-image: url(assets/images/shape/shape-27.png);">
+                                    </div>
                                     <div class="icon-box"><i class="flaticon-water-drop-1"></i></div>
                                     <h4>Productos Garantizados</h4>
                                 </div>
@@ -183,7 +209,8 @@
                     <div class="col-lg-6 col-md-12 col-sm-12 image-column">
                         <div class="image_block_2">
                             <div class="image-box">
-                                <figure class="image image-1 clearfix"><img src="assets/images/resource/about-2.png" alt=""></figure>
+                                <figure class="image image-1 clearfix"><img src="assets/images/resource/about-2.png"
+                                        alt=""></figure>
                                 <div class="text">
                                     <h2>7</h2>
                                     <h6>Años de experiencia</h6>
@@ -193,7 +220,8 @@
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12 content-column">
                         <div class="content_block_1">
-                            <div class="content-box wow fadeInRight animated" data-wow-delay="00ms" data-wow-duration="1500ms">
+                            <div class="content-box wow fadeInRight animated" data-wow-delay="00ms"
+                                data-wow-duration="1500ms">
                                 <div class="sec-title">
                                     <h2>Venta de gases industriales</h2>
                                 </div>
@@ -236,7 +264,8 @@
             <div class="auto-container">
                 <div class="row align-items-center clearfix">
                     <div class="col-lg-6 col-md-12 col-sm-12 image-column">
-                        <figure class="image-box wow slideInLeft animated" data-wow-delay="00ms" data-wow-duration="1500m clearfix"><img src="assets/svg/truck.svg" alt=""></figure>
+                        <figure class="image-box wow slideInLeft animated" data-wow-delay="00ms"
+                            data-wow-duration="1500m clearfix"><img src="assets/svg/truck.svg" alt=""></figure>
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12 content-column">
                         <div class="content_block_3">
@@ -268,12 +297,18 @@
         <!-- testimonial-style-two -->
         <section class="testimonial-style-two centred bg-color-1">
             <div class="thumb-box">
-                <div class="thumb thumb-1"><img src="assets/images/references/2.png" style="width: 50px; object-fit: contain;" alt=""></div>
-                <div class="thumb thumb-2"><img src="assets/images/references/1.png" style="width: 50px; object-fit: contain;" alt=""></div>
-                <div class="thumb thumb-3"><img src="assets/images/references/3.png" style="width: 50px; object-fit: contain;" alt=""></div>
-                <div class="thumb thumb-4"><img src="assets/images/references/1.png" style="width: 50px; object-fit: contain;" alt=""></div>
-                <div class="thumb thumb-5"><img src="assets/images/references/2.png" style="width: 50px; object-fit: contain;" alt=""></div>
-                <div class="thumb thumb-6"><img src="assets/images/references/3.png" style="width: 50px; object-fit: contain;" alt=""></div>
+                <div class="thumb thumb-1"><img src="assets/images/references/2.png"
+                        style="width: 50px; object-fit: contain;" alt=""></div>
+                <div class="thumb thumb-2"><img src="assets/images/references/1.png"
+                        style="width: 50px; object-fit: contain;" alt=""></div>
+                <div class="thumb thumb-3"><img src="assets/images/references/3.png"
+                        style="width: 50px; object-fit: contain;" alt=""></div>
+                <div class="thumb thumb-4"><img src="assets/images/references/1.png"
+                        style="width: 50px; object-fit: contain;" alt=""></div>
+                <div class="thumb thumb-5"><img src="assets/images/references/2.png"
+                        style="width: 50px; object-fit: contain;" alt=""></div>
+                <div class="thumb thumb-6"><img src="assets/images/references/3.png"
+                        style="width: 50px; object-fit: contain;" alt=""></div>
             </div>
             <div class="pattern-layer">
                 <div class="pattern-1" style="background-image: url(assets/images/shape/shape-35.png);"></div>
@@ -289,7 +324,8 @@
                         <div class="single-item-carousel owl-carousel owl-theme dots-style-one owl-nav-none">
                             <div class="testimonial-block-two">
                                 <div class="inner-box">
-                                    <figure class="author-thumb"><img src="assets/images/references/1.png" alt=""></figure>
+                                    <figure class="author-thumb"><img src="assets/images/references/1.png" alt="">
+                                    </figure>
                                     <div class="inner">
                                         <ul class="rating clearfix">
                                             <li><i class="fas fa-star"></i></li>
@@ -306,7 +342,8 @@
                             </div>
                             <div class="testimonial-block-two">
                                 <div class="inner-box">
-                                    <figure class="author-thumb"><img src="assets/images/references/2.png" alt=""></figure>
+                                    <figure class="author-thumb"><img src="assets/images/references/2.png" alt="">
+                                    </figure>
                                     <div class="inner">
                                         <ul class="rating clearfix">
                                             <li><i class="fas fa-star"></i></li>
@@ -323,7 +360,8 @@
                             </div>
                             <div class="testimonial-block-two">
                                 <div class="inner-box">
-                                    <figure class="author-thumb"><img src="assets/images/references/3.png" alt=""></figure>
+                                    <figure class="author-thumb"><img src="assets/images/references/3.png" alt="">
+                                    </figure>
                                     <div class="inner">
                                         <ul class="rating clearfix">
                                             <li><i class="fas fa-star"></i></li>
