--- a/contact.html
+++ b/contact.html
@@ -142,6 +142,8 @@
                                     <h5>Llámanos</h5>
                                     <p>
                                         <span class="data_phone"></span>
+                                        <br>
+                                        <span class="data_phone_2"></span>
                                     </p>
                                 </li>
                             </ul>
