--- a/about.html
+++ b/about.html
@@ -303,7 +303,7 @@
                 </div>
                 <div class="row clearfix">
                     <div class="col-xl-8 col-lg-12 col-md-12 offset-xl-2">
-                        <div class="single-item-carousel owl-carousel owl-theme dots-style-one owl-nav-none">
+                        <div class="single-item-carousel owl-carousel owl-theme dots-style-one owl-nav-none testimonials">
                             <div class="testimonial-block-two">
                                 <div class="inner-box">
                                     <figure class="author-thumb"><img src="assets/images/references/1.png" alt="">
@@ -390,6 +390,7 @@
     <!-- main-js -->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/testimonials.js"></script>
 
 </body><!-- End of .page_wrapper -->
 
