--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 </div>
                 <div class="row clearfix">
                     <div class="col-xl-8 col-lg-12 col-md-12 offset-xl-2">
-                        <div class="single-item-carousel owl-carousel owl-theme dots-style-one owl-nav-none">
+                        <div class="single-item-carousel owl-carousel owl-theme dots-style-one owl-nav-none testimonials">
                             <div class="testimonial-block-two">
                                 <div class="inner-box">
                                     <figure class="author-thumb"><img src="assets/images/references/1.png" alt="">
@@ -372,7 +372,23 @@
                                         </ul>
                                         <p></p>
                                         <h5>PHARVET SAS</h5>
-                                        <!-- <span class="designation">CEO Founder</span> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="testimonial-block-two">
+                                <div class="inner-box">
+                                    <figure class="author-thumb"><img src="assets/images/references/3.png" alt="">
+                                    </figure>
+                                    <div class="inner">
+                                        <ul class="rating clearfix">
+                                            <li><i class="fas fa-star"></i></li>
+                                            <li><i class="fas fa-star"></i></li>
+                                            <li><i class="fas fa-star"></i></li>
+                                            <li><i class="fas fa-star"></i></li>
+                                            <li><i class="fas fa-star"></i></li>
+                                        </ul>
+                                        <p></p>
+                                        <h5>PHARVET SAS</h5>
                                     </div>
                                 </div>
                             </div>
@@ -404,6 +420,7 @@
     <!-- main-js -->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/testimonials.js"></script>
 
 </body><!-- End of .page_wrapper -->
 
