--- a/about.html
+++ b/about.html
@@ -299,66 +299,10 @@
             <div class="map-layer" style="background-image: url(assets/images/icons/map-1.png);"></div>
             <div class="auto-container">
                 <div class="sec-title">
-                    <h2> ¿Qué dicen nuestros clientes? </h2>
+                    <h2> Clientes </h2>
                 </div>
                 <div class="row clearfix">
-                    <div class="col-xl-8 col-lg-12 col-md-12 offset-xl-2">
-                        <div class="single-item-carousel owl-carousel owl-theme dots-style-one owl-nav-none testimonials">
-                            <div class="testimonial-block-two">
-                                <div class="inner-box">
-                                    <figure class="author-thumb"><img src="assets/images/references/1.png" alt="">
-                                    </figure>
-                                    <div class="inner">
-                                        <ul class="rating clearfix">
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                        </ul>
-                                        <p></p>
-                                        <h5>COOPERATIVA DE BOMBEROS OFICIALES DE BOGOTA</h5>
-                                        <!-- <span class="designation">Designer</span> -->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="testimonial-block-two">
-                                <div class="inner-box">
-                                    <figure class="author-thumb"><img src="assets/images/references/2.png" alt="">
-                                    </figure>
-                                    <div class="inner">
-                                        <ul class="rating clearfix">
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                        </ul>
-                                        <p></p>
-                                        <h5>PERMODA</h5>
-                                        <!-- <span class="designation">Manager</span> -->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="testimonial-block-two">
-                                <div class="inner-box">
-                                    <figure class="author-thumb"><img src="assets/images/references/3.png" alt="">
-                                    </figure>
-                                    <div class="inner">
-                                        <ul class="rating clearfix">
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                            <li><i class="fas fa-star"></i></li>
-                                        </ul>
-                                        <p></p>
-                                        <h5>PHARVET SAS</h5>
-                                        <!-- <span class="designation">CEO Founder</span> -->
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-xl-8 col-lg-12 col-md-12 offset-xl-2 customers">
                     </div>
                 </div>
             </div>
