--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@
                             </div>
                             <div class="content-box">
                                 <h2>RECARGA DE GASES INDUSTRIALES</h2>
-                                <p>venta gases industriales equipos de oxicorte venta de cilindros y mantenimiento de
-                                    equipos, válvulas, regualdores, pintura, electrostática de cilindros, pintura
-                                    electrostática de cilindros y extintores</p>
+                                <p>Nitrógeno argon c02 Acetileno AGAMIX mezclas especiales oxígeno industrial helio aire comprimido venta de válvulas y equipos de oxicorte pruebas hidrostáticas certificadas .</p>
                                 <div class="btn-box clearfix">
                                     <a href="services.html" class="theme-btn btn-one">Nuestros servicios</a>
                                 </div>
@@ -141,8 +139,7 @@
                             </div>
                             <div class="content-box">
                                 <h2>RECARGA DE GASES INDUSTRIALES</h2>
-                                <p>NITROGENO ARGON CO2 ACETILENO MEZCLA OXIGENO HELIO . VENTA CILINDROS REGULADORES
-                                    VALVULAS PRUEBAS EQUIPOS HIDROSTATICAS</p>
+                                <p>Pruebas hidrostáticas y equipos de oxicorte</p>
                                 <div class="btn-box clearfix">
                                     <a href="services.html" class="theme-btn btn-one">Nuestros servicios</a>
                                 </div>
